--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -12,4 +12,13 @@
         android:id="@+id/playButton"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/how_to_play"
+        android:id="@+id/howPlayButton"
+        android:layout_marginTop="82dp"
+        android:layout_below="@+id/playButton"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
