--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/how_to_play"
-        android:id="@+id/howPlayButton"
+        android:id="@+id/howToPlayButton"
         android:layout_marginTop="82dp"
         android:layout_below="@+id/playButton"
         android:layout_centerHorizontal="true" />
