--- a/app/src/main/res/layout/activity_register_successful.xml
+++ b/app/src/main/res/layout/activity_register_successful.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="net.ricky.runningdead.RegisterSuccess">
+    tools:context="net.ricky.runningdead.RegisterSuccessful">
 
     <LinearLayout
         android:orientation="vertical"
@@ -35,6 +35,16 @@
             android:paddingTop="10dp"
             android:id="@+id/registerSuccessPrompt2" />
 
-
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/done_button2"
+        android:id="@+id/done_button2"
+        android:layout_gravity="bottom"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
