--- a/app/src/main/res/layout/activity_how_to_play.xml
+++ b/app/src/main/res/layout/activity_how_to_play.xml
@@ -5,35 +5,46 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/how_to_play"
-        android:layout_centerHorizontal="true"
-        android:textSize="32sp"
-        android:layout_width="wrap_content"
-        android:id="@+id/HowToPlay"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textView" />
+
+        <TextView android:text="@string/how_to_play"
+            android:gravity="center_horizontal"
+            android:textSize="32sp"
+            android:layout_width="fill_parent"
+            android:id="@+id/HowToPlay"
+            android:layout_height="fill_parent" />
+
+    </LinearLayout>
 
     <TextView android:text="@string/getting_started_1"
         android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:id="@+id/GettingStarted1" />
+        android:id="@+id/gettingStartedTitle" />
 
     <TextView android:text="@string/getting_started_2"
         android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/GettingStarted1"
+        android:layout_below="@+id/gettingStartedTitle"
         android:paddingTop="16dp"
-        android:id="@+id/GettingStarted2" />
-
-    <TextView android:text="@string/getting_started_3"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/GettingStarted2"
-        android:paddingTop="16dp"
-        android:id="@+id/GettingStarted3" />
+        android:id="@+id/gettingStarted" />
 
     <Button
         android:layout_width="wrap_content"
@@ -42,4 +53,5 @@
         android:id="@+id/NextButton1"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
