fixed gender to only 3 values

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -73,7 +73,7 @@
         android:id="@+id/password"
         android:hint="@string/password" />
 
-    <EditText
+    <Spinner
         android:paddingTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
