map populates with zombies and score screen added

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -21,12 +21,22 @@
         android:layout_marginTop="82dp"
         android:layout_below="@+id/playButton"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/viewscoreButton"
+        android:id="@+id/scoreButton"
+        android:layout_marginTop="82dp"
+        android:layout_below="@+id/howToPlayButton"
+        android:layout_centerHorizontal="true" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nfcButton"
         android:id="@+id/runNFCButton"
         android:layout_marginTop="82dp"
-        android:layout_below="@+id/howToPlayButton"
+        android:layout_below="@+id/scoreButton"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
